--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -1,5 +1,6 @@
 text_extensions: ["coffee", "css", "erb", "haml", "handlebars", "hb", "htm", "html", "js", "less", "markdown", "md", "ms", "mustache", "php", "rb", "sass", "scss", "slim", "txt", "xhtml", "xml"]
 
+env: "production"
 output_dir: output
 index_filenames: ["index.html"]
 enable_output_diff: false
