--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -1,13 +1,10 @@
-text_extensions: ["coffee", "css", "erb", "haml", "handlebars", "hb", "htm", "html", "js", "less", "markdown", "md", "ms", "mustache", "php", "rb", "sass", "scss", "slim", "txt", "xhtml", "xml"]
-
 env: "production"
 output_dir: output
 index_filenames: ["index.html"]
 enable_output_diff: false
 
 prune:
-  auto_prune: false
-  exclude: [".git", ".hg", ".svn", "CVS"]
+  auto_prune: true
 
 data_sources:
   -
