--- a/Rules
+++ b/Rules
@@ -13,20 +13,29 @@
 #
 PAGE_EXTENSION = %w[haml md]
 RELATIVIZE = %w[html css]
+LANGUAGES = %w[en et]
 KINDS = {"guideline" => %r(^/guidelines/[^/]+/$)}
 noop = proc {}
 
 preprocess do
   @config[:env] = ENV["NANOC_ENV"] ? ENV["NANOC_ENV"].downcase : "production"
+  @config[:lang] = ENV["NANOC_LANG"] || "et"
 
 	@items.each do |item|
-    KINDS.find {|type, path| item[:kind] = type if item.identifier =~ path }
+    KINDS.find do |type, path|
+      item[:kind] = type if item.identifier =~ path
+    end
+
+    LANGUAGES.find do |lang|
+      item[:lang] = lang if item.identifier.end_with?(".#{lang}/")
+    end
 
     # is_hidden is for sidemap
     item[:is_hidden] = true if item[:hidden]
   end
 end
 
+layout "*", :haml, :format => :html5
 ignore "*/_*/"
 
 compile KINDS["guideline"] do
@@ -50,4 +59,3 @@ route "/guidelines/" do "/index.html" end
 route "/_*", &noop
 
 route "*" do routify item end
-layout "*", :haml, :format => :html5
